<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/textViewFoodName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Food_Name"
        android:textStyle="bold"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/textViewDonorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/donor_name"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/textViewFoodType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food_type"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/textViewLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/textViewQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/textViewDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distance"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/textViewStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/buttonClaimDonation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accept_donation" />
</LinearLayout>
