<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/textViewVolunteerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volunteer_name"
        android:textStyle="bold"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/textViewOrganizationName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/org_name"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/textViewFoodType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food_type"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/textViewPickupLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pickup_location"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/textViewPickupTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preferred_pickup_time"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/textViewDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distance"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/buttonSelectVolunteer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_volunteer" />
</LinearLayout>
