<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/editProfileImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_profile_placeholder"
            android:contentDescription="@string/Profile_Picture"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.SmallComponent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editUserNameLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"
            app:layout_constraintTop_toBottomOf="@id/editProfileImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveProfileButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/lesshighbutton"
            android:text="@string/save"
            android:textColor="@color/white_text"
            app:layout_constraintTop_toBottomOf="@id/editUserNameLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
